--- a/inte/scss/components/_buttons.scss
+++ b/inte/scss/components/_buttons.scss
@@ -171,12 +171,10 @@
         .no-js &, .is-desktop &{
             background: #fff;
         }
-        span{
-            transform: translate3d(0, -21px, 0);
-        }
         .no-js &{
-            @include themeColor;
-            @include themeBorder;
+            span{
+                transform: translate3d(0, -21px, 0);
+            }
         }
     }
     &:active{
@@ -349,18 +347,20 @@
             margin-top: -5px;
         }
     }
-    &:hover{
-        background-color: $we;
-        color: #fff;
-        &:before, &:after{
-            transform: translate3d(7px, 0, 0);
-        }
-        &.left{
-            &:before{
-                transform: translate3d(-7px, 0, 0);
+    &:hover, &:focus{
+        .no-js &, .is-desktop &{
+            background-color: $we;
+            color: #fff;
+            &:before, &:after{
+                transform: translate3d(7px, 0, 0);
             }
-            &:after{
-                transform: translate3d(-7px, 0, 0) rotate(-180deg);
+            &.left{
+                &:before{
+                    transform: translate3d(-7px, 0, 0);
+                }
+                &:after{
+                    transform: translate3d(-7px, 0, 0) rotate(-180deg);
+                }
             }
         }
     }
